tests/paczka1/fuzzy1/55787194.err
Error in line 1: wmxrSgpj A215 1,8
Error in line 9: wmxrSgpj A575 806
Error in line 5: 5Jh A158 8,9
Error in line 12: AkMOiq3Kj8i S741 0,2
Error in line 26: wmxrSgpj A575 102,9
Error in line 24: psqc S741 49,2
Error in line 25: AkMOiq3Kj8i S741 82,8
Error in line 36: AkMOiq3Kj8i A575 -3,7
Error in line 30: 5Jh A575 20,9
